// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Default renders correctly 1`] = `
<jest>
  <div
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__slider"
    >
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image-gradient"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image-shade"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="ecl-carousel__controls"
    >
      <button
        class="ecl-carousel__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </button>
      <button
        class="ecl-carousel__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </button>
      <div
        class="ecl-container"
      >
        <button
          class="ecl-carousel__autoplay"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#pause"
            />
          </svg>
        </button>
        <div
          class="ecl-carousel__pagination"
        >
          <span
            class="ecl-carousel__current"
          >
            1
          </span>
           of 3
      
        </div>
        <div
          class="ecl-carousel__navigation"
        />
      </div>
    </div>
  </div>
</jest>
`;

exports[`Carousel Default renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-carousel"
    data-ecl-auto-init="Carousel"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-carousel__slider"
    >
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image-gradient"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image-shade"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="ecl-carousel__controls"
    >
      <button
        class="ecl-carousel__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </button>
      <button
        class="ecl-carousel__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </button>
      <div
        class="ecl-container"
      >
        <button
          class="ecl-carousel__autoplay"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#pause"
            />
          </svg>
        </button>
        <div
          class="ecl-carousel__pagination"
        >
          <span
            class="ecl-carousel__current"
          >
            1
          </span>
           of 3
      
        </div>
        <div
          class="ecl-carousel__navigation"
        />
      </div>
    </div>
  </div>
</jest>
`;

exports[`Carousel Default renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-carousel custom-class custom-class--test"
    data-ecl-auto-init="Carousel"
  >
    <div
      class="ecl-carousel__slider"
    >
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image-gradient"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div>
        <section
          class="ecl-page-banner ecl-page-banner--image-shade"
        >
          <div
            class="ecl-page-banner__image"
            style="background-image:url(https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg)"
          />
          <div
            class="ecl-container"
          >
            <div
              class="ecl-page-banner__container"
            >
              <div
                class="ecl-page-banner__content"
              >
                <div
                  class="ecl-page-banner__title"
                >
                  EU Budget for the future
                </div>
                <p
                  class="ecl-page-banner__description"
                >
                  Innovation, economy, environment and geopolitics
                </p>
                <a
                  aria-label="Subscribe"
                  class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after ecl-page-banner__link-cta"
                  href="/example"
                >
                  <span
                    class="ecl-link__label"
                  >
                    Subscribe
                  </span>
                  <svg
                    aria-hidden="true"
                    class="ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-link__icon"
                    focusable="false"
                  >
                    <use
                      xlink:href="/icons.svg#corner-arrow"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="ecl-carousel__controls"
    >
      <button
        class="ecl-carousel__prev"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-270 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </button>
      <button
        class="ecl-carousel__next"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--m ecl-icon--rotate-90 ecl-icon--inverted ecl-u-d-block"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#corner-arrow"
          />
        </svg>
      </button>
      <div
        class="ecl-container"
      >
        <button
          class="ecl-carousel__autoplay"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--m ecl-icon--inverted"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#pause"
            />
          </svg>
        </button>
        <div
          class="ecl-carousel__pagination"
        >
          <span
            class="ecl-carousel__current"
          >
            1
          </span>
           of 3
      
        </div>
        <div
          class="ecl-carousel__navigation"
        />
      </div>
    </div>
  </div>
</jest>
`;
